# CS523

./: .buildinfo  CMakeLists.txt  README.md  cg.html  dot_product.html  elastic.html  extrapolation.html  genindex.html  index.html  linear.html  marching_cubes.html  multigrid.html  objects.inv  ode.html  rigid.html  search.html  searchindex.js  variable.html
.doctrees/: cg.doctree  dot_product.doctree  elastic.doctree  environment.pickle  extrapolation.doctree  index.doctree  linear.doctree  marching_cubes.doctree  multigrid.doctree  ode.doctree  rigid.doctree  variable.doctree
.doctrees/homeworks/: homework1.doctree  homework2.doctree  homework3.doctree  proposal.doctree
_sources/: cg.txt  dot_product.txt  elastic.txt  extrapolation.txt  index.txt  multigrid.txt  variable.txt
_sources/homeworks/: homework3.txt  proposal.txt
docs_src/: conf.py  index.rst  linear.rst  marching_cubes.rst  ode.rst  rigid.rst
docs_src/homeworks/: homework1.rst  homework2.rst  homework3.rst
homeworks/: homework1.html  homework2.html  homework3.html  proposal.html
